# strs.h

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
include/: file.h  strs.h
src/: file.c  main.c  strs.c
